--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+=<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -10,53 +10,8 @@
     <!-- Link to Google Fonts (Roboto Slab) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- Add custom styles here -->
-    <style>
-        /* Customizing the picture */
-        .profilepic {
-            width: 120px;  /* Adjusted smaller width */
-            border-radius: 50%;  /* Circular shape */
-            display: block;
-            margin: 0;  /* Align with left column */
-        }
-
-        /* Layout for image and content */
-        .fixed-posi {
-            text-align: left;  /* Align name and contact info to the left */
-        }
-
-        .container {
-            display: flex;
-            align-items: flex-start;
-        }
-
-        .col-md-4 {
-            flex: 0 0 30%;  /* Left column for image and contact info */
-        }
-
-        .col-md-8 {
-            flex: 0 0 70%;  /* Right column for content */
-            padding-left: 20px;
-        }
-
-        /* Customizing fonts */
-        body {
-            font-family: 'Roboto Slab', serif;  /* Use Roboto Slab for all text */
-            color: #333;
-        }
-
-        h2 {
-            color: #2C3E50;  /* Dark blue for headers */
-        }
-
-        p {
-            line-height: 1.6;  /* Spacing for readability */
-        }
-
-        a {
-            color: #007bff; /* Link color */
-        }
-    </style>
+    <!-- Link to the external style.css -->
+    <link rel="stylesheet" href="style.css">
 
     <title>Eleonora Minaeva</title>
 </head>
