--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Eleonora Minaeva">
     <meta name="theme-color" content="#222222">
 
-    <!-- Link to the Minimal theme CSS files from the orderedlist repository -->
+    <!-- Link to the Minimal theme CSS files -->
     <link rel="stylesheet" href="https://raw.githubusercontent.com/orderedlist/minimal/master/stylesheets/styles.css">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/orderedlist/minimal/master/stylesheets/pygment_trac.css">
 
@@ -18,6 +18,13 @@
         <header>
             <h1>Eleonora Minaeva</h1>
             <p>PhD Researcher in Political Science</p>
+            <!-- Profile Picture -->
+            <img src="eleonora-minaeva-main-pic.jpg" alt="Eleonora Minaeva" style="width: 150px; border-radius: 50%;">
+            <!-- Contact Information -->
+            <p>Email: <a href="mailto:eleonora.minaeva@eui.eu">eleonora.minaeva@eui.eu</a></p>
+            <p>GitHub: <a href="https://github.com/eleonora-minaeva" target="_blank">github.com/eleonora-minaeva</a></p>
+            <!-- CV Download Link -->
+            <p><a href="CV-Sep-2024.pdf" target="_blank">Download CV</a></p>
         </header>
 
         <section id="about">
